<resources>
    <string name="app_name" translatable="false">Zeus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_artist">Search artist</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="term_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="enter_your_mobile_to_retrieve_your_password">Enter your mobile to retrieve your password.</string>
    <string name="resend">Resend</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="create_a_new_password">Create a New Password</string>
    <string name="verify">Verify</string>
    <string name="save">Save</string>
    <string name="your_new_password_must_be_diffrent_from_npreviously_used_password">Your new password must be diffrent from \npreviously used password.</string>
    <string name="total_login_duration">Total Login Duration</string>
    <string name="past_orders">Past Orders</string>
    <string name="view_all">View All</string>
    <string name="incoming_orders">Incoming Orders</string>
    <string name="your_earnings">Your Earnings</string>
    <string name="total_orders">Total Orders</string>
    <string name="total_orders_earning">Total Orders Earning</string>
    <string name="pick_up">Pick Up</string>
    <string name="dropoff">Dropoff</string>
    <string name="accept">Accept</string>
    <string name="orders">Orders</string>
    <string name="active">Active</string>
    <string name="go_offline">Go Offline</string>
    <string name="go_online">Go Online</string>
    <string name="incoming">Incoming</string>
    <string name="completed">Completed</string>
    <string name="my_profile">My Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="help_center">Help Center</string>
    <string name="account_settings">Account Settings</string>
    <string name="notifications">Notifications</string>


    <string name="enter_name">Enter name</string>
    <string name="name_must_have_atleast_3_character_long">Name must have atleast 3 character long</string>
    <string name="name_maximum">Name should not exceed 15 character</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="enter_Number_with_Country_Code">Enter Number with Country Code (e.g +92)</string>
    <string name="enter_Password">Enter Password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="enter_your_password">xxxxxxxxx</string>
    <string name="password_8_character">Password must have atleast 8 character</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="wallet">Wallet</string>
    <string name="available_balance">Available Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="account_setting">Account Setting</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="allow_location">Allow Location</string>
    <string name="we_need_to_know_your_location_to_find_orders_near_you">We need to know your location to find orders near you.</string>
    <string name="thank_you">Thank You!</string>
    <string name="thank_you_for_contacting_us_we_ll_nbe_in_touch_very_soon">Thank you for contacting us, we’ll\nbe in touch very soon.</string>
    <string name="back_to_home">Back to home</string>
    <string name="order_summery">Order Summery</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="order_complete">Order Complete</string>
    <string name="total_amount">Total Amount</string>
    <string name="reason">Reason</string>
    <string name="write_a_valid_reason_for_going_offline">Write a valid reason for going offline.</string>
    <string name="submit">Submit</string>
    <string name="current_password">Current Password</string>
    <string name="parcel_summery">Parcel Summery</string>
    <string name="chat_with_customer">Chat with Customer</string>
    <string name="languages">Languages</string>
    <string name="otp">OTP</string>
    <string name="enter_the_6_digit_verification_code_nsent_on_your_mobile_number">Enter the 6-digit verification code,\nsent on your mobile number.</string>
    <string name="special">Special</string>
    <string name="select_card">Select Card</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="set_as_default">Set As Default</string>
    <string name="detach_card">Detach Card</string>
    <string name="by_creating_your_account_you_agree_to_our">By creating your account, you agree to our</string>
    <string name="register">Register</string>
    <string name="top_up">Top-up</string>
    <string name="how_much_amount_would_you_like_to_transfer">How much amount would you like to transfer?</string>
    <string name="top_up_amount">Top-up Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_new_card">Add New Card</string>
    <string name="confirm">Confirm</string>
    <string name="change">Change</string>
    <string name="order_completed">Order Completed</string>
    <string name="password_changed_successfully">Password Changed Successfully!</string>
    <string name="use_your_new_password_to_login">Use your new password to login.</string>
    <string name="you_need_to_login_or_signup_to_nmove_further">You need to login or signup to\nmove further</string>
    <string name="top_up_success">Top-up Success</string>
    <string name="your_top_up_has_been_successfully_done">Your top-up has been successfully done</string>
    <string name="top_up_more_amount">Top-up more amount</string>
    <string name="as_a_crucial_part_of_the_hatly_delivery_experience_we_need_your_consent_to_collect_personal_information_encompassing_your_name_address_history_phone_number_and_transaction_details_our_commitment_to_seamless_service_delivery_relies_on_background_location_tracking_facilitated_by_gps_and_other_methods_even_when_the_app_is_closed_this_allows_us_to_send_you_timely_notifications_about_pending_orders_and_pickup_locations_within_a_five_kilometer_radius_furthermore_this_data_aids_in_the_effective_assignment_of_orders_to_you_your_agreement_to_this_data_collection_is_imperative_for_the_proper_functioning_of_the_hatly_platform_for_a_detailed_overview_of_our_processes_please_consult_our_privacy_policy_the_rider_app_uses_background_location_for_timely_order_notifications_and_effective_order_assignment">As a crucial part of the Hatly delivery experience, we need your consent to collect personal information, encompassing your name, address history, phone number, and transaction details. Our commitment to seamless service delivery relies on background location tracking, facilitated by GPS and other methods, even when the app is closed. This allows us to send you timely notifications about pending orders and pickup locations within a five-kilometer radius. Furthermore, this data aids in the effective assignment of orders to you. Your agreement to this data collection is imperative for the proper functioning of the Hatly platform. For a detailed overview of our processes, please consult our Privacy Policy. The Rider App uses background location for timely order notifications and effective order assignment.</string>
    <string name="total_parcels_earning">Total Parcels Earning</string>
    <string name="total_parcels">Total Parcels</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="special_incoming_orders">Special Incoming Orders</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="are_you_sure_you_want_delete_user_account">Are you sure you want to delete this account</string>
    <string name="delete">Delete</string>
    <string name="withdraw">Withdraw</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="withdrawal_history">Withdrawal History</string>
    <string name="withdrawal_detail">Withdrawal Detail</string>
    <string name="transaction_receipt">Transaction Receipt</string>
    <string name="status">Status</string>
    <string name="reference_no">Reference No.</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="to_account_iban">To Account/IBAN</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number_iban">Account Number / IBAN</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>
    <string name="yearly">yearly</string>
    <string name="past_special_orders">Past Special Orders</string>


</resources>