<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/circle"
            android:elevation="@dimen/_3sdp"
            android:padding="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@drawable/back_arrow" />

        <ImageView
            android:id="@+id/imgBack1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_auth_field"
            android:backgroundTint="@color/white"
            android:elevation="1dp"
            android:padding="@dimen/_5sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />


        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:letterSpacing="0.02"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/withdraw"
            android:fontFamily="@font/open_sans_bold"
            style="@style/txtGrayColor"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@+id/imgBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="@+id/imgBack"
            app:layout_constraintVertical_bias="0.75" />




        <TextView
            android:id="@+id/textView456"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_much_amount_would_you_like_to_transfer"
            android:fontFamily="@font/open_sans_regular"
            style="@style/txtGrayColor"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imgBack1"
            app:layout_constraintStart_toStartOf="@+id/imgBack"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:hint="@string/amount"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
            app:boxCornerRadiusBottomStart="@dimen/_5sdp"
            app:boxCornerRadiusTopEnd="@dimen/_5sdp"
            app:boxCornerRadiusTopStart="@dimen/_5sdp"
            app:boxStrokeColor="@color/textSecondaryColor"
            app:layout_constraintEnd_toEndOf="@+id/textView456"
            app:layout_constraintStart_toStartOf="@+id/textView456"
            app:layout_constraintTop_toBottomOf="@+id/textView456">

            <com.google.android.material.textfield.TextInputEditText
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_5sdp" />

        </com.google.android.material.textfield.TextInputLayout>


<!--

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius_corner"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/top_up_amount"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="#B3EA1B25"
            android:layout_marginTop="@dimen/_10sdp"
            android:textCursorDrawable="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/textView456"
            app:layout_constraintStart_toStartOf="@+id/textView456"
            app:layout_constraintTop_toBottomOf="@+id/textView456" />
-->





        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdp"
            android:background="@drawable/card_background_green"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/open_sans_regular"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.2" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>