<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_210sdp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_120sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/card_background_green"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/_2sdp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@drawable/round_border" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/line" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0"
            app:srcCompat="@drawable/round_border" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_3sdp"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="@+id/price"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dropoff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/price"
            style="@style/open_sans_secondary_bold_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="200 AED"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/red"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/card_background_green"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/card_background_green"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="@+id/textView21" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>